--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
 
 :root {
   --black: #141414;
@@ -10,17 +10,19 @@
   --red: #f64f59;
   --white: #eeeeee;
 }
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 html {
+  min-height: 100vh;
   scroll-behavior: smooth;
 }
 body {
-  min-height: 100vh;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: var(--black);
 }
 
@@ -30,7 +32,7 @@ header {
   background-color: var(--darkBlack);
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 100vw;
   z-index: 99;
 }
 section {
@@ -38,6 +40,7 @@ section {
   justify-content: center;
   align-items: center;
   margin: 0 20px;
+  max-width: 100vw;
 }
 img {
   height: 100%;
@@ -63,15 +66,15 @@ a {
 form {
   input,
   textarea {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     padding: 0.3rem;
     color: var(--white);
   }
   input {
-    width: 150px;
+    width: 130px;
   }
   textarea {
-    width: 320px;
+    width: 280px;
   }
   input:focus,
   textarea:focus {
@@ -92,9 +95,15 @@ form {
   align-items: center;
   justify-content: space-between;
   margin: 20px;
+  min-width: 100vw;
 
   &__title {
-    background-image: linear-gradient(-45deg, var(--blue), var(--pink), var(--red));
+    background-image: linear-gradient(
+      -45deg,
+      var(--blue),
+      var(--pink),
+      var(--red)
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -108,9 +117,10 @@ form {
 }
 
 .hamburger {
+  margin-right: 50px;
   position: relative;
   display: block;
-  width: 35px;
+  width: 30px;
   cursor: pointer;
   appearance: none;
   background: none;
@@ -119,7 +129,7 @@ form {
   &__bar,
   &::after,
   &::before {
-    content: "";
+    content: '';
     display: block;
     width: 35px;
     height: 3px;
@@ -143,8 +153,8 @@ form {
   position: fixed;
   top: 0;
   left: 100%;
-  width: 100%;
-  min-height: 100vh;
+  width: 100vw;
+  min-height: 100%;
   display: block;
   z-index: 98;
   background: #1d1d1f;
@@ -177,6 +187,9 @@ form {
   opacity: 1;
   left: 0;
 }
+.navigation {
+  display: none;
+}
 
 .top-content {
   display: flex;
@@ -206,7 +219,7 @@ form {
     &-desktop {
       width: max-content;
       border-radius: 20px;
-      height: 450px;
+      height: 275px;
       background-color: var(--black);
       border: 2px solid var(--purple);
     }
@@ -227,14 +240,13 @@ form {
   margin-top: 180px;
   &__title {
     color: var(--white);
-    font-size: 18px;
-
+    font-size: 1rem;
     display: flex;
     align-items: center;
     p {
       text-align: center;
       margin: 10px;
-      width: 400px;
+      width: 300px;
     }
     h1 {
       text-align: center;
@@ -323,7 +335,7 @@ form {
       border: 1px solid var(--white);
       border-radius: 10px;
       color: var(--white);
-      font-family: "Montserrat", sans-serif;
+      font-family: 'Montserrat', sans-serif;
       transition: 0.3s ease-in-out all;
       &:hover {
         border: 1px solid var(--purple);
@@ -338,6 +350,9 @@ form {
     }
   }
 }
+footer {
+  max-width: 100vw;
+}
 .footer {
   margin-top: 60px;
   display: flex;
@@ -346,13 +361,14 @@ form {
   padding: 1rem;
   color: var(--white);
 }
-@media (max-width: 370px) {
+
+@media (min-width: 370px) {
   .top-content {
     margin-top: 245px;
     height: 180px;
     img {
-      height: 400px;
-      width: 210px;
+      height: 300px;
+      width: 300px;
     }
   }
   .about-me {
@@ -367,10 +383,14 @@ form {
     &__image {
       height: 330px;
       width: 300px;
+      img {
+        height: 320px;
+        width: 320px;
+      }
     }
   }
   .about-me {
-    margin-top: 210px;
+    margin-top: 240px;
     &__title {
       font-size: 20px;
     }
@@ -392,7 +412,7 @@ form {
     }
   }
   .about-me {
-    margin-top: 230px;
+    margin-top: 330px;
 
     &__title {
       font-size: 26px;
@@ -406,32 +426,24 @@ form {
     }
   }
 }
-@media (max-width: 767px) {
-  .navigation {
-    display: none;
-  }
-}
 
 @media (min-width: 768px) {
-  .navigation-mobile,
-  .hamburger {
-    display: none;
-  }
   header {
-    .navigation {
-      &__list {
-        display: flex;
-        gap: 20px;
-      }
-      &__item {
-        display: flex;
-      }
+    min-width: 100%;
+  }
+  .navigation {
+    display: block;
+    &__list {
+      margin-right: 40px;
+      width: 400px;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      list-style-type: none;
     }
   }
-  h1 {
-    font-size: 34px;
-    letter-spacing: 2px;
-    color: var(--purple);
+  .hamburger {
+    display: none;
   }
 
   .top-content {
@@ -470,7 +482,13 @@ form {
         left: 0;
         width: calc(100% + 4px);
         height: calc(100% + 4px);
-        background: linear-gradient(90deg, #ff8038 0%, #ff0099 30.43%, #00ebeb 68.23%, #db00ff 100%);
+        background: linear-gradient(
+          90deg,
+          #ff8038 0%,
+          #ff0099 30.43%,
+          #00ebeb 68.23%,
+          #db00ff 100%
+        );
         background-size: 600% 600%;
         border-radius: 20px;
         animation: AnimateBorder 4s ease infinite;
@@ -501,7 +519,7 @@ form {
       }
     }
     &__image {
-      height: 400px;
+      height: 300px;
       width: 300px;
       &-mobile {
         display: none;
@@ -582,13 +600,6 @@ form {
       display: flex;
       flex-direction: column;
       gap: 20px;
-    }
-
-    .formData {
-      textarea,
-      input {
-        transition: 0.2s ease-in-out all;
-      }
     }
   }
 }
